--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,22 @@ _____                           _
   color: white;
 }
 /*
+  ___   _   _ ________  ___  ___ _____ _____ _____ _   _  _____
+ / _ \ | \ | |_   _|  \/  | / _ \_   _|_   _|  _  | \ | |/  ___|
+/ /_\ \|  \| | | | | .  . |/ /_\ \| |   | | | | | |  \| |\ `--.
+|  _  || . ` | | | | |\/| ||  _  || |   | | | | | | . ` | `--. \
+| | | || |\  |_| |_| |  | || | | || |  _| |_\ \_/ / |\  |/\__/ /
+\_| |_/\_| \_/\___/\_|  |_/\_| |_/\_/  \___/ \___/\_| \_/\____/
+
+*/
+@-webkit-keyframes menu-item-hover{
+  from{
+    font-weight: bold;
+  }to{
+    font-size: bolder;
+  }
+}
+/*
 ___  ___ _____ _   _ _   _       ______  ___  ______
 |  \/  ||  ___| \ | | | | |      | ___ \/ _ \ | ___ \
 | .  . || |__ |  \| | | | |______| |_/ / /_\ \| |_/ /
@@ -50,6 +66,10 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
   padding-left: 20px;
   float: left;
 }
+.nav-item:hover{
+  -webkit-animation-name: menu-item-hover;
+  -webkit-animation-duration: 2.5s;
+}
 /*
  _   _
 | | | |
@@ -67,8 +87,12 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
 #billboard{
   margin-top: 14%;
   margin-bottom: 15%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
   height: 250px;
-  width: auto;
+  width: 250px;
+  border-radius: 125px;
 }
 /*
 ______          _
