--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,20 +9,20 @@
   <div id="nav-bar-wrapper">
     <ul id="nav-bar-list">
       <div class="nav-item-wrapper" id="cmh-wrapper">
-        <a class="nav-item" id="cmh" href="#">C M H</a>
+        <a class="nav-item" id="cmh" href="\">C M H</a>
       </div>
       <div class="nav-item-wrapper">
-        <a class="nav-item" href="#">
+        <a class="nav-item" id="projects" href="projects">
           Projects
         </a>
       </div>
       <div class="nav-item-wrapper">
-        <a class="nav-item" href="#">
+        <a class="nav-item" id="about" href="about">
           About
         </a>
       </div>
       <div class="nav-item-wrapper">
-        <a class="nav-item" href="#">
+        <a class="nav-item" id="contact" href="contact">
           Contact
         </a>
       </div>
