fixed JSON loop for projects page, TODO: css for projects, add pictures and other items for the page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -95,6 +95,15 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
   border-radius: 125px;
 }
 /*
+____________ _____   ___ _____ _____ _____ _____
+| ___ \ ___ \  _  | |_  |  ___/  __ \_   _/  ___|
+| |_/ / |_/ / | | |   | | |__ | /  \/ | | \ `--.
+|  __/|    /| | | |   | |  __|| |     | |  `--. \
+| |   | |\ \\ \_/ /\__/ / |___| \__/\ | | /\__/ /
+\_|   \_| \_|\___/\____/\____/ \____/ \_/ \____/
+*/
+
+/*
 ______          _
 |  ___|        | |
 | |_ ___   ___ | |_ ___ _ __
