--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -3,7 +3,7 @@
   <head>
       <% include partials/header.ejs %>
       <div>
-      <%- include(page) %>
+      <% include partials/projects.ejs %>
     </div>
     <% include partials/scripts.ejs %>
   </body>
