--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,1 +1,7 @@
-
+<div>
+<% for(var i = 0; i < projects.length; i++){ %>
+  <div class="project-wrapper">
+    <h2 class="project-name"><%- projects[i].name %><h2>
+  </div>
+<% } %>
+</div>
