worked on projects page, added the css for each div

--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,4 +1,4 @@
-<div>
+<div class="project-content-wrapper">
 <% for(var i = 0; i < projects.length; i++){ %>
   <div class="project-wrapper">
     <h2 class="project-name"><%- projects[i].name %><h2>
