--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,7 +130,18 @@ ____________ _____   ___ _____ _____ _____ _____
 | |   | |\ \\ \_/ /\__/ / |___| \__/\ | | /\__/ /
 \_|   \_| \_|\___/\____/\____/ \____/ \_/ \____/
 */
-
+.project-content-wrapper{
+  margin-top: 5%;
+  width: 100%;
+  height: 260px;
+}
+.project-wrapper{
+  height: 350px;
+  width: 240px;
+  background-color: black;
+  margin: .71%;
+  float: left;
+}
 /*
 ______          _
 |  ___|        | |
