--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,7 +1,9 @@
 <div class="project-content-wrapper">
 <% for(var i = 0; i < projects.length; i++){ %>
   <div class="project-wrapper">
-    <h2 class="project-name"><%- projects[i].name %><h2>
+    <h2 class="project-name"><%- projects[i].name %></h2>
+    <p class="project-description"><%- projects[i].description %></p>
+    <a class="project-link" href=<%- projects[i].link %>>GOTO -></a>
   </div>
 <% } %>
 </div>
