--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -3,7 +3,7 @@
   <div class="project-wrapper">
     <h2 class="project-name"><%- projects[i].name %></h2>
     <p class="project-description"><%- projects[i].description %></p>
-    <a class="project-link" href=<%- projects[i].link %>>GOTO -></a>
+    <a class="project-link" href=<%- projects[i].link %>>GOTO &raquo;</a>
   </div>
 <% } %>
 </div>
