--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,15 +130,17 @@ ____________ _____   ___ _____ _____ _____ _____
 .project-content-wrapper{
   margin-top: 5%;
   width: 100%;
-  height: 260px;
+  /*height: 260px;*/
 }
 .project-wrapper{
   height: 350px;
-  width: 240px;
-  background-color: black;
+  width: 230px;
+  background-color: rgba(0,0,0,.5);
   margin: .71%;
   float: left;
   text-align: center;
+  border: solid 4px white;
+  border-radius: 2px;
 }
 .project-link{
   color: currentColor;
@@ -146,6 +148,12 @@ ____________ _____   ___ _____ _____ _____ _____
   font-weight: bold;
   float: right;
   padding-right: 5px;
+}
+.project-img{
+  margin-top: 10px;
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
 }
 /*
 ______          _
