--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,9 +1,15 @@
 <div class="project-content-wrapper">
+  <div class="project-slideshow-wrapper">
+    
+  </div>
+<div class="projects-container">
 <% for(var i = 0; i < projects.length; i++){ %>
   <div class="project-wrapper">
+    <img class="project-img" src=<%- projects[i].picture %>>
     <h2 class="project-name"><%- projects[i].name %></h2>
     <p class="project-description"><%- projects[i].description %></p>
     <a class="project-link" href=<%- projects[i].link %>>GOTO &raquo;</a>
   </div>
 <% } %>
+</div>
 </div>
