--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,6 +104,14 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
 \_| |_/\___/|_| |_| |_|\___|
 
 */
+#canvas{
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+}
 #billboard-wrapper{
   margin: 0;
   padding: 0;
@@ -134,7 +142,7 @@ ____________ _____   ___ _____ _____ _____ _____
 .projects-container{
   display: inline-block;
   height: 620px;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .image-slider-ul{
   position: relative;
