almost finsihedgit add *git add *! for now....

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -2,12 +2,16 @@
 <div id="name-tag-wrapper">
   <h1 id="name-tag">Caleb Hering</h1>
 </div>
-<p id="about-me-text">It is a long established fact that a reader will be
-  distracted by the readable content of a page when looking at its layout.
-  The point of using Lorem Ipsum is that it has a more-or-less normal
-  distribution of letters, as opposed to using 'Content here, content here',
-  making it look like readable English. Many desktop publishing packages and
-  web page editors now use Lorem Ipsum as their default model text, and a search
-  for 'lorem ipsum' will uncover many web sites still in their infancy.
-   Various versions have evolved over the years, sometimes by accident, sometimes
-    on purpose (injected humour and the like).</p>
+<p id="about-me-text">Hi, I'm Caleb Hering, sometimes also known as <span style="color: #4CD4B0;">'c-hering'</span> or <span style="color: #4CD4B0;">'Toastyyyyy'</span>.
+  I'm a 15yr old developer from Bethesda, Maryland and a sophmore at Walt Whitman Highschool. In the future I hope to study and persue
+<span style="color: #4CD4B0;">Computer Science</span>, <span style="color: #4CD4B0;">Cyber Security/Cryptography</span>, <span style="color: #4CD4B0;">Robotics</span>
+and <span style="color: #4CD4B0;">Busines Managment</span>. More specifically than computer science is <span style="color: #4CD4B0;">Machine Learning</span> and <span style="color: #4CD4B0;">Web Development</span>.
+<br/><br/>My love for programming/engineering first developed when I watched <span style="color: #4CD4B0;">WarGames</span> for the first time out of many times to come.
+This love grew through stories of my late grandfather, who worked at <span style="color: #4CD4B0;">Bell Labs</span>, and through any books I could find on
+programming. Recently I took a month long class in Cambridge England, with a student at Pembrook College of Cambridge University who was working on <span style="color: #4CD4B0;">Quantum Computers</span>.
+This opened my eyes and started a fire in the world of electrical engineering and Quantum Computing.
+<br/><br/>Currently I am working on personal projects to progress my knowledge in computer science concepts, and programming languages. I also am working on
+robots with my school FRC team; Team 1389. Then on the side I am working to become a freelance developer, creating websites, or other programs. Check me out on
+
+<a href="https://github.com/c-hering" target="_blank" style="text-decoration: none; color: #4CD4B0;">Github</a>
+</p>
