--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,6 +26,13 @@ _____                           _
 \_| |_/\_| \_/\___/\_|  |_/\_| |_/\_/  \___/ \___/\_| \_/\____/
 
 */
+@-webkit-keyframes rotate-img{
+  from{
+    transform:rotate(0deg);
+  }to{
+    transform:rotate(360deg);
+  }
+}
 @-webkit-keyframes menu-item-hover{
   from{
     border-bottom: 2px solid rgba(255,255,255,0);
@@ -120,6 +127,7 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
   align-items: center;
 }
 #billboard{
+  /*-webkit-animation: rotate-img 1s infinite linear;*/
   margin-top: 14%;
   margin-bottom: 15%;
   margin-left: auto;
@@ -139,13 +147,9 @@ ____________ _____   ___ _____ _____ _____ _____
 \_|   \_| \_|\___/\____/\____/ \____/ \_/ \____/
 */
 .project-content-wrapper{
-  width: 100%;
+  margin-top: 5%;
   text-align: center;
-}
-.projects-container{
-  display: inline-block;
-  height: 620px;
-  /*overflow: hidden;*/
+  width: 100%;
 }
 .image-slider-ul{
   position: relative;
@@ -156,39 +160,13 @@ ____________ _____   ___ _____ _____ _____ _____
   float: none;
 }
 .image-slider-image{
-  height: 600px;
+  float: left;
+  height: 350px;
   width: auto;
   border-bottom: 4px solid #4CD4B0;
-  margin-bottom: 10px;
 }
-
-.project-content-wrapper{
-  margin-top: 5%;
-  width: 100%;
-  /*height: 260px;*/
-}
-.project-wrapper{
-  height: 350px;
-  width: 230px;
-  background-color: rgba(0,0,0,.5);
-  margin: .71%;
-  float: left;
-  text-align: center;
-  border: solid 4px white;
-  border-radius: 2px;
-}
-.project-link{
-  color: currentColor;
-  text-decoration: none;
-  font-weight: bold;
-  float: right;
-  padding-right: 5px;
-}
-.project-img{
-  margin-top: 10px;
-  height: 100px;
-  width: 100px;
-  border-radius: 50px;
+#img5{
+  margin-bottom: 10%;
 }
 
 /*
@@ -219,14 +197,20 @@ ____________ _____   ___ _____ _____ _____ _____
   font-weight: bold;
   margin: 10px;
 }
+#github-link{
+  display: block;
+  width: 20px;
+  height: 20px;
+}
 #about-me-text{
   border-top: 2px solid #4CD4B0;
   padding-left: 2%;
   padding-right: 2%;
   padding-top: 1%;
-  margin-top: 8%;
-  margin-left: 15%;
-  margin-right: 15%;
+  padding-bottom: 5%;
+  margin-top: 7%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 /*
 ______          _
@@ -238,8 +222,10 @@ ______          _
 
 */
 #footer-wrapper{
+  z-index: -1;
+  position: fixed;
   text-align: center;
-  height: 10%;
   width: 100%;
-  margin-top: auto;
+  height: 10%;
+  bottom: 0;
 }
