--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,1 +1,11 @@
-
+<div id="contact-wrapper">
+  <h1 id="contact-title">Let's Get In Touch</h1>
+  <div id="form-background">
+    <form id="contact-form">
+      Name <br/><input type="text" name="name" class="contact-input" id="name-input"><br/>
+      Email <br/><input type="text" name="email" class="contact-input" id="email-input"><br/>
+      Msg <br/><textarea type="text" name="msg" class="contact-input" id="msg-input"></textarea><br/>
+      <button class="contact-submit">Submit</button>
+    </form>
+  </div>
+</div>
