copyright overlap mebe

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -15,3 +15,13 @@ robots with my school FRC team; Team 1389. Then on the side I am working to beco
 
 <a href="https://github.com/c-hering" target="_blank" style="text-decoration: none; color: #4CD4B0;">Github</a>
 </p>
+
+<script>
+  function checkOverlap(){
+    checkCopyRightOverlap();
+  }
+  $(document).ready(function(){
+    checkOverlap();
+  });
+  window.onscroll = checkOverlap(); 
+</script>
