copyright overlap mebe

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -15,7 +15,7 @@ robots with my school FRC team; Team 1389. Then on the side I am working to beco
 
 <a href="https://github.com/c-hering" target="_blank" style="text-decoration: none; color: #4CD4B0;">Github</a>
 </p>
-
+<script type="text/javascript" src="javascript/scripts.js"></script>
 <script>
   function checkOverlap(){
     checkCopyRightOverlap();
@@ -23,5 +23,5 @@ robots with my school FRC team; Team 1389. Then on the side I am working to beco
   $(document).ready(function(){
     checkOverlap();
   });
-  window.onscroll = checkOverlap(); 
+  window.onscroll = checkOverlap();
 </script>
