played around with idea of different color themes for each page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
   <div id="nav-bar-wrapper">
     <ul id="nav-bar-list">
       <div class="nav-item-wrapper" id="cmh-wrapper">
-        <a class="nav-item" id="cmh" href="\">C M H</a>
+        <a class="nav-item" id="cmh" href="\" style=<%- colorstyle %>>C M H</a>
       </div>
       <div class="nav-item-wrapper">
         <a class="nav-item" id="projects" href="projects">
