thinking bout different color schemes for each page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,11 +3,12 @@
   <head>
       <% include partials/header.ejs %>
       <% include partials/scripts.ejs %>
+      <% include partials/background.ejs %>
     <div>
       <% include partials/about.ejs %>
     </div>
-  </body>
   <% include partials/footer.ejs %>
+</body>
   <script type="text/javascript" src="javascript/ImageSlider.js"></script>
   <script>
     function checkCopyRightOverlap(){
