--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,9 +3,10 @@
   <head>
       <% include partials/header.ejs %>
       <% include partials/scripts.ejs %>
+      <% include partials/background.ejs %>
       <div>
       <%- include partials/contact.ejs %>
     </div>
-  </body>
   <% include partials/footer.ejs %>
+  </body>
 </html>
