--- a/views/template.ejs
+++ b/views/template.ejs
@@ -3,9 +3,10 @@
   <head>
       <% include partials/header.ejs %>
       <% include partials/scripts.ejs %>
+      <% include partials/background.ejs %>
       <div>
       <%- include(page) %>
     </div>
-  </body>
   <% include partials/footer.ejs %>
+</body>
 </html>
