fixed color bugs but some slides look like they have empty space that needs some filling

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,7 +5,7 @@
       <% include partials/scripts.ejs %>
       <% include partials/background.ejs %>
       <div>
-      <%- include partials/contact.ejs %>
+      <% include partials/contact.ejs %>
     </div>
   <% include partials/footer.ejs %>
   </body>
