--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,10 +10,10 @@ _____                           _
  */
 #body{
   font-family: 'Nunito', sans-serif;
-  background-size: cover;
+  /*background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: fixed;*/
   color: white;
 }
 /*
@@ -195,7 +195,7 @@ ____________ _____   ___ _____ _____ _____ _____
   float: left;
   height: 350px;
   width: auto;
-  border-bottom: 4px solid #4CD4B0;
+  border-bottom: 4px solid #462446;
 }
 #img5{
   margin-bottom: 10%;
@@ -224,7 +224,7 @@ ____________ _____   ___ _____ _____ _____ _____
 }
 #name-tag{
   text-align: center;
-  color: #4CD4B0;
+  color: #FFC153;
   font-size: 20px;
   font-weight: bold;
   margin: 10px;
@@ -259,12 +259,12 @@ ____________ _____   ___ _____ _____ _____ _____
   display: block;
 }
 #contact-title{
-  color: #4CD4B0;
+  color: #BF4A67;
   position: relative;
 }
 #form-background{
   font-size: 20px;
-  color: #4CD4B0;
+  color: #BF4A67;
   position: absolute;
   width: 500px;
   height: 500px;
@@ -301,7 +301,7 @@ ____________ _____   ___ _____ _____ _____ _____
   border-radius: 5px;
   border: none;
   background: #ffffff;
-  color: #4CD4B0;
+  color: #BF4A67;
   box-shadow: 0 3px #c9c9c9;
 }
 /*
