--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -2,16 +2,16 @@
 <div id="name-tag-wrapper">
   <h1 id="name-tag">Caleb Hering</h1>
 </div>
-<p id="about-me-text">Hi, I'm Caleb Hering, sometimes also known as <span style="color: #4CD4B0;">'c-hering'</span> or <span style="color: #4CD4B0;">'Toastyyyyy'</span>.
+<p id="about-me-text">Hi, I'm Caleb Hering, sometimes also known as <span style="color: #FFC153;">'c-hering'</span> or <span style="color: #FFC153;">'Toastyyyyy'</span>.
   I'm a 15yr old developer from Bethesda, Maryland and a sophomore at Walt Whitman Highschool. In the future I hope to study and pursue
-<span style="color: #4CD4B0;">Computer Science</span>, <span style="color: #4CD4B0;">Cyber Security/Cryptography</span>, <span style="color: #4CD4B0;">Robotics</span>
-and <span style="color: #4CD4B0;">Business Management</span>. More specifically than computer science is <span style="color: #4CD4B0;">Machine Learning</span> and <span style="color: #4CD4B0;">Web Development</span>.
-<br/><br/>My love for programming/engineering first developed when I watched <span style="color: #4CD4B0;">WarGames</span> for the first time out of many times to come.
-This love grew through stories of my late grandfather, who worked at <span style="color: #4CD4B0;">Bell Labs</span>, and through any books I could find on
-programming. Recently I took a month long class in Cambridge England, with a student at Pembrook College of Cambridge University who was working on <span style="color: #4CD4B0;">Quantum Computers</span>.
+<span style="color: #FFC153;">Computer Science</span>, <span style="color: #FFC153;">Cyber Security/Cryptography</span>, <span style="color: #FFC153;">Robotics</span>
+and <span style="color: #FFC153;">Business Management</span>. More specifically than computer science is <span style="color: #FFC153;">Machine Learning</span> and <span style="color: #FFC153;">Web Development</span>.
+<br/><br/>My love for programming/engineering first developed when I watched <span style="color: #FFC153;">WarGames</span> for the first time out of many times to come.
+This love grew through stories of my late grandfather, who worked at <span style="color: #FFC153;">Bell Labs</span>, and through any books I could find on
+programming. Recently I took a month long class in Cambridge England, with a student at Pembrook College of Cambridge University who was working on <span style="color: #FFC153;">Quantum Computers</span>.
 This opened my eyes and started a fire in the world of electrical engineering and Quantum Computing.
 <br/><br/>Currently I am working on personal projects to progress my knowledge in computer science concepts, and programming languages. I also am working on
 robots with my school FRC team; Team 1389. Then on the side I am working to become a freelance developer, creating websites, or other programs. Check me out on
 
-<a href="https://github.com/c-hering" target="_blank" style="text-decoration: none; color: #4CD4B0;">Github</a>
+<a href="https://github.com/c-hering" target="_blank" style="text-decoration: none; color: #FFC153;">Github</a>
 </p>
