--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -214,7 +214,7 @@ ____________ _____   ___ _____ _____ _____ _____
 #profile-pic{
   display: block;
   margin: auto;
-  margin-top: 100px;
+  margin-top: 50px;
   width: 200px;
   height: auto;
   border-radius: 100px;
@@ -236,12 +236,12 @@ ____________ _____   ___ _____ _____ _____ _____
   height: 20px;
 }
 #about-me-text{
-  border-top: 2px solid #4CD4B0;
+  border-top: 2px solid #FFC153;
   padding-left: 2%;
   padding-right: 2%;
   padding-top: 1%;
   padding-bottom: 5%;
-  margin-top: 7%;
+  margin-top: 3%;
   margin-left: 10%;
   margin-right: 10%;
 }
