--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,10 +10,7 @@ _____                           _
  */
 #body{
   font-family: 'Nunito', sans-serif;
-  /*background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-attachment: fixed;*/
+  overflow-y:hidden;
   color: white;
 }
 /*
@@ -41,23 +38,13 @@ _____                           _
 }
 @-webkit-keyframes image-animation{
   0%{
-  }
-  25%{
-    width: 220px;
-    height: 220px;
-    border-radius: 110px;
-  }
-  50%{
-    width: 250px;
-    height: 250px;
-    border-radius: 125px;
-  }
-  75%{
-    width: 210px;
-    height: 210px;
-    border-radius: 105px;
+    opacity: 0;
+    width: 400px;
+    height: 400px;
+    border-radius: 200px;
   }
   100%{
+    opacity: 1;
     width: 250px;
     height: 250px;
     border-radius: 125px;
@@ -159,7 +146,7 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
   align-items: center;
 }
 #billboard{
-  /*-webkit-animation: rotate-img 1s infinite linear;*/
+  -webkit-animation: image-animation .5s;
   margin-top: 14%;
   margin-bottom: 15%;
   margin-left: auto;
