--- a/views/partials/preloader.ejs
+++ b/views/partials/preloader.ejs
@@ -3,8 +3,10 @@
 </div>
 <script>
   $(window).load(function(){
+    setTimeout(functino(){
     $('#preloaded-wrapper').fadeOut('slow', function(){
       $(this).remove();
+    }, 3000);
     });
   });
 </script>
