--- a/views/partials/preloader.ejs
+++ b/views/partials/preloader.ejs
@@ -1,7 +1,7 @@
 <div id='preloader-wrapper'>
   <p>WHA IS GOING ON</p>
 </div>
-<script>
+<!-- <script>
   $(window).load(function(){
     setTimeout(functino(){
     $('#preloaded-wrapper').fadeOut('slow', function(){
@@ -9,4 +9,4 @@
     }, 3000);
     });
   });
-</script>
+</script> -->
