--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,7 +121,7 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
   border-bottom: 2px solid #4CD4B0;
   font-weight: bolder;
   text-align: center;
-  padding-left: 0px;
+  padding-left: 0;
 }
 #nav-bar-wrapper{
   width: 100%;
@@ -167,10 +167,7 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
 }
 #billboard{
   -webkit-animation: image-animation .5s;
-  margin-top: 14%;
-  margin-bottom: 15%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 14% auto 15% auto;
   display: block;
   height: 250px;
   width: 250px;
@@ -204,9 +201,6 @@ ____________ _____   ___ _____ _____ _____ _____
   width: auto;
   border-bottom: 4px solid #B05F6D;
   border-top: 4px solid #B05F6D;
-}
-.image-slider-image:hover{
-  /*-webkit-animation: project-anim .2s ;*/
 }
 #img5{
   margin-bottom: 10%;
