--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,10 +1,12 @@
 <div id="contact-wrapper">
-  <h1 id="contact-title">Let's Get In Touch</h1>
+  <h1 id="contact-title">if(tooBusyCodingForPhone){sendEmail(name, email, msg)}</h1>
   <div id="form-background">
     <form id="contact-form">
-      Name <br/><input type="text" name="name" class="contact-input" id="name-input"><br/>
-      Email <br/><input type="text" name="email" class="contact-input" id="email-input"><br/>
-      Msg <br/><textarea type="text" name="msg" class="contact-input" id="msg-input"></textarea><br/>
+      <h4> sendEmail(){ </h4>
+      name <br/><input type="text" name="name" class="contact-input" id="name-input"><br/>
+      email <br/><input type="text" name="email" class="contact-input" id="email-input"><br/>
+      msg <br/><textarea type="text" name="msg" class="contact-input" id="msg-input"></textarea><br/>
+      <h4> } </h4>
       <button class="contact-submit">Submit</button>
     </form>
   </div>
