--- a/views/template.ejs
+++ b/views/template.ejs
@@ -6,7 +6,9 @@
       <% include partials/background.ejs %>
       <div>
       <%- include(page) %>
+      <%- include partials/about %>
+      <%- include partials/projects %>
     </div>
-  <% include partials/footer.ejs %>
+  <!-- <% include partials/footer.ejs %> -->
 </body>
 </html>
